[package]
name = "Rastman"
version = "0.1.0"
authors = ["Vitalii A. Petrenko <v.petrenko@space-flow.dev>"]
edition = "2021"

[dependencies]
iced = {version = "0.14.0", features = ['highlighter']}
iced_test = "0.14.0"
serde_json = "1.0.145"
reqwest = {version = "0.12", features = ["json", "blocking"]}
rayon = "1.11.0"
